Added update and delete functions.